// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should build a select from automations 1`] = `
Array [
  <div
    className="flex flex-col"
  >
    <div>
      Foo
    </div>
    <div
      className="text-neutral-500 text-xs"
    >
      
    </div>
  </div>,
  <div
    className="flex flex-col"
  >
    <div>
      Bar
    </div>
    <div
      className="text-neutral-500 text-xs"
    >
      Bar automation
    </div>
  </div>,
]
`;

exports[`should build a select from endpoint automations  1`] = `
<div
  className="flex flex-col"
>
  <div>
    Bar
  </div>
  <div
    className="text-neutral-500 text-xs"
  >
    Bar automation
  </div>
</div>
`;

exports[`should build a select from pages 1`] = `
Array [
  <div
    className="flex flex-col"
  >
    <div>
      Foo
    </div>
    <div
      className="text-neutral-500 text-xs"
    >
      
    </div>
  </div>,
  <div
    className="flex flex-col"
  >
    <div>
      Bar
    </div>
    <div
      className="text-neutral-500 text-xs"
    >
      Bar automation
    </div>
  </div>,
]
`;
